@@ -74,6 +74,8 @@ public:
 
     virtual void EnsureVisible(int n) wxOVERRIDE;
 
+    virtual int GetTopItem() const wxOVERRIDE;
+
     virtual void Update() wxOVERRIDE;
 
     static wxVisualAttributes
